# sfml-vcpkg-static

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
